fix for dark mode being applied

--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,9 @@ html,
 .ui.segment.sticky {
   border-radius: 0 !important;
 }
+.ui.left.push.sidebar {
+  padding-top: 40px !important;
+}
 .ui.header.login-heading {
   letter-spacing: 1.5px;
   font-size: 22px;
